--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: linear-gradient(to right,rgba(33, 27, 117, 0.7), rgba(182, 155, 155, 0.7));
+    background-image: linear-gradient(to bottom,rgb(2 0 96 / 70%), rgb(0 0 0));
     height: 100vh;
     width: 100%;
     background-repeat:no-repeat;
@@ -27,7 +27,7 @@ body{
 }
 
 h1{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
     position: relative;
     top: 5rem;
@@ -75,30 +75,81 @@ h1{
     background-color: rgb(0, 0, 0);
 }
 
-.progress {
-    width: 200px;
-    height: 17.6px;
-    border-radius: 16px;
-    color: #767793;;
-    border: 1.6px solid;
-    position: relative;
-    margin: 10px; 
-}  
-.progress::before {
-    content: "";
-    position: absolute;
-    margin: 1px;
-    inset: 0 100% 0 0;
-    border-radius: inherit;
-    background: currentColor;
-    animation: progress-pf82op 4s infinite; 
-} 
-@keyframes progress-pf82op {
-    100% {
-        inset: 0;
-    }
+.bars {
+    width: 10.1px;
+    height: 10.1px;
+    background: #000000;
+    color: #000000;
+    box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
+        -20.2px  0  ,       20.2px  0  ,
+        -20.2px  10.1px,0  10.1px,20.2px  10.1px,
+        -20.2px 20.2px,0 20.2px,20.2px 20.2px;
+    animation: bars-s9errfmd 1s infinite;
+    margin: 40px;
 }
 
+@keyframes bars-s9errfmd {
+    10% {
+        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px #0000,
+            -20.2px 20.2px,0 20.2px,20.2px 20.2px;
+    }   
+    20% {
+        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px,0  10.1px,20.2px  10.1px #0000,
+            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
+    }   
+    30% {
+        box-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px,
+            -20.2px  0   #0000,       20.2px  0  ,
+            -20.2px  10.1px,0  10.1px #0000,20.2px  10.1px,
+            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px #0000;
+    }
+
+    40% {
+        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
+            -20.2px  0  #0000,       20.2px  0 #0000,
+            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
+            -20.2px 20.2px,0 20.2px,20.2px 20.2px;
+    }
+
+    50% {
+        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
+        -20.2px  0  ,       20.2px  0  #0000,
+        -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px,
+        -20.2px 20.2px,0 20.2px,20.2px 20.2px;
+    }    
+
+    60% {
+        ox-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px,
+            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
+    }
+
+    70% {
+        ox-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px #0000,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
+            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
+    }
+
+    80% {
+        ox-shadow: -20.2px -10.1px #0000,0 -10.1px,20.2px -10.1px,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
+            -20.2px 20.2px,0 20.2px,20.2px 20.2px #0000;
+    }
+
+    90% {
+        box-shadow: -20.2px -10.1px #0000,0 -10.1px,20.2px -10.1px,
+            -20.2px  0  ,       20.2px  0  ,
+            -20.2px  10.1px,0  10.1px #0000,20.2px  10.1px,
+            -20.2px 20.2px,0 20.2px,20.2px 20.2px #0000;
+    }
+}
 @media screen and  (min-width:300px) and  (max-width :576px){
     body{
         background-image: linear-gradient(to bottom,rgb(51 97 102 / 93%), rgb(0 0 0));
@@ -121,5 +172,9 @@ h1{
     }
     #qrImg{
         background-color : black;
+    }
+    .bars {
+        background: #ffffff;
+        color: #ffffff;
     }
 }
