--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@
 
 body{
     background-image: linear-gradient(to bottom,rgb(2 0 96 / 70%), rgb(0 0 0));
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     background-repeat:no-repeat;
     background-size:cover;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .container{
@@ -26,7 +26,7 @@ body{
     border-radius: 8px;
 }
 
-h1{
+#mainTitle{
     color: rgb(255, 255, 255);
     text-align: center;
     position: relative;
@@ -75,81 +75,63 @@ h1{
     background-color: rgb(0, 0, 0);
 }
 
-.bars {
-    width: 10.1px;
-    height: 10.1px;
-    background: #000000;
-    color: #000000;
-    box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
-        -20.2px  0  ,       20.2px  0  ,
-        -20.2px  10.1px,0  10.1px,20.2px  10.1px,
-        -20.2px 20.2px,0 20.2px,20.2px 20.2px;
-    animation: bars-s9errfmd 1s infinite;
-    margin: 40px;
+.imgBox{
+    margin: 0px;
+    padding: 0px;
 }
 
-@keyframes bars-s9errfmd {
-    10% {
-        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px #0000,
-            -20.2px 20.2px,0 20.2px,20.2px 20.2px;
-    }   
-    20% {
-        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px,0  10.1px,20.2px  10.1px #0000,
-            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
-    }   
-    30% {
-        box-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px,
-            -20.2px  0   #0000,       20.2px  0  ,
-            -20.2px  10.1px,0  10.1px #0000,20.2px  10.1px,
-            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px #0000;
-    }
-
-    40% {
-        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
-            -20.2px  0  #0000,       20.2px  0 #0000,
-            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
-            -20.2px 20.2px,0 20.2px,20.2px 20.2px;
-    }
-
-    50% {
-        box-shadow: -20.2px -10.1px,0 -10.1px,20.2px -10.1px,
-        -20.2px  0  ,       20.2px  0  #0000,
-        -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px,
-        -20.2px 20.2px,0 20.2px,20.2px 20.2px;
-    }    
-
-    60% {
-        ox-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px #0000,0  10.1px,20.2px  10.1px,
-            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
-    }
-
-    70% {
-        ox-shadow: -20.2px -10.1px,0 -10.1px #0000,20.2px -10.1px #0000,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
-            -20.2px 20.2px #0000,0 20.2px,20.2px 20.2px;
-    }
-
-    80% {
-        ox-shadow: -20.2px -10.1px #0000,0 -10.1px,20.2px -10.1px,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px,0  10.1px,20.2px  10.1px,
-            -20.2px 20.2px,0 20.2px,20.2px 20.2px #0000;
-    }
-
-    90% {
-        box-shadow: -20.2px -10.1px #0000,0 -10.1px,20.2px -10.1px,
-            -20.2px  0  ,       20.2px  0  ,
-            -20.2px  10.1px,0  10.1px #0000,20.2px  10.1px,
-            -20.2px 20.2px,0 20.2px,20.2px 20.2px #0000;
+.progress {
+    width: 200px;
+    height: 17.6px;
+    border-radius: 16px;
+    color: #050507;;
+    border: 1.6px solid;
+    position: relative;
+    margin: 30px; 
+}  
+.progress::before {
+    content: "";
+    position: absolute;
+    margin: 1px;
+    inset: 0 100% 0 0;
+    border-radius: inherit;
+    background: currentColor;
+    animation: AniProgress 4s infinite; 
+} 
+@keyframes AniProgress {
+    100% {
+        inset: 0;
     }
 }
+
+#historyTitle{
+    text-align: center;
+    color: white;
+}
+
+.historyBox{
+    display: flex;
+    background-color :rgba(140, 132, 132, 0.637);
+    flex-direction: column;
+    border : 1px solid black;
+    margin: 10px;
+    padding: 20px;
+}
+
+.addBox{
+    height: auto;
+    background-color :rgba(140, 132, 132, 0.637);
+}
+.imgURL{
+    color: red;
+    text-decoration: underline;
+    margin: 10px 0px 10px 0px;
+}
+
+.historyImg{
+    width: 150px;
+}
+
 @media screen and  (min-width:300px) and  (max-width :576px){
     body{
         background-image: linear-gradient(to bottom,rgb(51 97 102 / 93%), rgb(0 0 0));
@@ -169,12 +151,5 @@ h1{
         width: 80%;
         margin: 80px auto;
         background-color: rgba(1, 3, 5, 0.583);
-    }
-    #qrImg{
-        background-color : black;
-    }
-    .bars {
-        background: #ffffff;
-        color: #ffffff;
     }
 }
