--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     padding: 0px;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
-
+    scroll-behavior: smooth;
 }
 
 body{
@@ -15,12 +15,20 @@ body{
     overflow: auto;
 }
 
+#page-1{
+    height: 100vh;
+}
+
+#page-2{
+    min-height: 100vh;
+    max-height: auto;
+}
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50vb;
-    margin: 100px auto;
+    margin: 65px auto;
     background-color: rgba(240, 248, 255, 0.583);
     text-align: center;
     border-radius: 8px;
@@ -30,7 +38,7 @@ body{
     color: rgb(255, 255, 255);
     text-align: center;
     position: relative;
-    top: 5rem;
+    top: 2.2rem;
     font-size: 40px;
 }
 
@@ -119,8 +127,7 @@ body{
 }
 
 .addBox{
-    height: auto;
-    background-color :rgba(140, 132, 132, 0.637);
+    /* height:200vh; */
 }
 .imgURL{
     color: red;
@@ -130,18 +137,19 @@ body{
 
 .historyImg{
     width: 150px;
+    transition: all 1s ;
 }
 
 @media screen and  (min-width:300px) and  (max-width :576px){
     body{
         background-image: linear-gradient(to bottom,rgb(51 97 102 / 93%), rgb(0 0 0));
-        height: 100vh;
+        /* height: 100vh; */
         width: 100%;
         align-items : center;
         text-align: center;
         color: aliceblue;
     }
-    h1{
+    #mainTitle{
         display: none;
         margin-left: 23%;
         width: 50%;
@@ -151,5 +159,11 @@ body{
         width: 80%;
         margin: 80px auto;
         background-color: rgba(1, 3, 5, 0.583);
+    }
+    #historyTitle{
+        font-size: 20px;
+    }
+    .historyImg{
+        margin: auto;
     }
 }
