--- a/index.css
+++ b/index.css
@@ -6,13 +6,10 @@
     scroll-behavior: smooth;
     /* color : rgb(24, 133, 211);
      */
-    color: #092635;
 }
 
 body{
-    /* background-image: linear-gradient(to RIGHT,rgb(4, 8, 43), #07365e); */
     background-color : #9EC8B9;
-    /* height: 100vh; */
     width: 100%;
     background-repeat:no-repeat;
     background-size:cover;
@@ -38,14 +35,25 @@ body{
 }
 
 .navbar{
+    display: flex;
+    justify-content: space-between;
+    /* background-color : black; */
     padding: 10px;
-    width: 100%;
+    width: auto;
 }
+
 #mainTitle{
+    justify-self:center;
     text-align: center;
     position: relative;
     font-size: 40px;
     font-weight: 300;
+    margin: auto;
+}
+.fa-clock-rotate-left{
+    font-size: 25px;
+    color: #092635;
+    margin-right: 10px;
 }
 
 .mainContainer{
@@ -60,6 +68,7 @@ body{
     font-weight: 500;
     cursor: pointer;
     transition: all 0.2s ;
+    color : white;
 }
 
 #qrText{
@@ -125,37 +134,37 @@ body{
     color: #092635;
 }
 
+
 .historyBox{
     display: flex;
-    background-color : #5C8374;
     flex-direction: column;
-    border-radius: 5px;
-    /* border : 1px solid white; */
-    margin: 10px;
+    width: 90%;
     padding: 20px;
+    justify-content: space-evenly;
+    margin: 10px auto;
+    background-color : #5C8374;
+    border-radius : 5px;
+
+}
+
+.historyBox h4{
     color: white;
 }
+
+.imgURL{
+    margin-top:10px ;
+    text-decoration: none;
+}
+
 
 #page-2{
     min-height: 100vh;
     max-height: auto;
 }
 
-.addBox{
-    border-radius: 5px;
-    padding: 20px;
-    min-height: 100vh;
-    max-height: auto;
-    margin: 20px;
-}
-.imgURL{
-    color: red;
-    text-decoration: underline;
-    margin: 10px 0px 10px 0px;
-}
-
 .historyImg{
     width: 150px;
+    margin-top: 10px;
     transition: all 1s ;
 }
 
@@ -167,12 +176,9 @@ body{
 
 @media screen and  (min-width:300px) and  (max-width :576px){
     body{
-        /* background-image: linear-gradient(to bottom,rgb(51 97 102 / 93%), rgb(0 0 0)); */
-        /* height: 100vh; */
         width: 100%;
         align-items : center;
         text-align: center;
-        /* color: aliceblue; */
     }
     .navbar{
         display: none;
@@ -193,19 +199,18 @@ body{
         font-size: 20px;
     }
     .historyImg{
-        margin: auto;
+        margin: 10px auto;
     }
     .historyBox{
+        color: white;
         padding: 5px;
-        /* padding: 0; */
+        width: 50%;
     }
     .imgURL{
         font-size: 10px;
-        text-wrap: wrap;
     }
     .addBox{
         border-radius: 5px;
-        width: 100%;
         padding: 10px;
         min-height: 50vh;
         max-height: auto;
