changes in code

--- a/index.css
+++ b/index.css
@@ -237,7 +237,8 @@ body{
     }
     .historyBox{
         padding: 5px;
-        width: 90%;
+        width: 80%;
+        overflow: hidden;
     }
     .imgURL{
         font-size: 10px;
