--- a/index.css
+++ b/index.css
@@ -105,6 +105,11 @@ body{
     background-color: rgb(0, 0, 0);
 }
 
+.fa-download{
+    margin-left: 5px;
+    font: 10px;
+}
+
 .imgBox{
     margin: 0px;
     padding: 0px;
