--- a/index.css
+++ b/index.css
@@ -271,3 +271,46 @@ body{
         font-size: 20px;
     }
 }
+
+
+
+
+
+
+/* hover effect */
+.fa-copy {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    color: #ffffff;
+}
+
+.hover-text:hover::after {
+    content: attr(data-hover-text);
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    transform: translateX(-50%);
+    background-color: #242424;
+    padding: 5px;
+    color: #fffafa;
+    z-index: 1;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.hover-text::after {
+    content: attr(data-hover-text);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f9f9f9;
+    padding: 5px;
+    color: #333;
+    z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
